plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1' // 3.4.1 -> 3.3.1 Spring AI 가 3.2, 3.3만 지원함.
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

ext {
    set('springAiVersion', "1.0.0-M4")
}

dependencies {
    // spring-boot
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    //spring-security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.springframework.security:spring-security-messaging'

    // lombok
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'

    // mySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    // junit
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    //websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    testImplementation 'org.springframework:spring-websocket'
    testImplementation 'org.springframework:spring-messaging'

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.jetbrains:annotations:24.0.1'
    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    testImplementation 'com.h2database:h2'

    // s3
    implementation 'software.amazon.awssdk:s3:2.20.89'
    implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.1'

    //Tika
    implementation group: 'org.apache.tika', name: 'tika-core', version: '2.7.0'

    // H2 Database for testing
    testImplementation 'com.h2database:h2'

    // MockMVC for controller testing
    testImplementation 'org.mockito:mockito-core:5.4.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'

    //thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    // kakao api
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // OpenAI API 연동을 위한 WebClient
    implementation "org.springframework.ai:spring-ai-openai-spring-boot-starter"
    implementation 'org.springframework.ai:spring-ai-openai'
    implementation "org.springframework.boot:spring-boot-starter-webflux"
    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
}

tasks.named('test') {
    useJUnitPlatform()
}


